<resources>
    <string name="app_name">NairoWeather</string>
    <string name="temperature_loading">---</string>
    <string name="time_loading">…</string>
    <string name="percent_loading">--%</string>
    <string name="content_desc_refresh">Refresh Button</string>
    <string name="content_desc_degree_sign">Degree Sign</string>
    <string name="no_location">Finding Location…</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_precip_chance">RAIN?</string>
    <string name="loading_forecast">Getting weather data…</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was an error. Please try again.</string>
    <string name="error_ok_button">OK</string>
    <string name="network_unavailable">Network is unavailable!</string>
</resources>
